fix textarea overflow his parent DIV in Electron

--- a/layout.css
+++ b/layout.css
@@ -58,7 +58,7 @@
             }
                 textarea.markdown{
                     width:100%;
-                    height: 100%;
+                    /* height: 100%; */
                     min-width: 100%;
                     flex-grow: 1;
                 }
